2008-03-08  Jürg Billeter  <j@bitron.ch>

	* vapi/packages/gtk+-2.0/: fix gtk_cell_renderer_get_size binding

	* vapi/gtk+-2.0.vapi: regenerated

2008-03-08  Jürg Billeter  <j@bitron.ch>

	* vapi/packages/gtk+-2.0/: fix gtk_tree_model_get_value binding,
	  fixes bug 520428

	* vapi/gtk+-2.0.vapi: regenerated

2008-03-08  Jürg Billeter  <j@bitron.ch>

	* vapi/glib-2.0.vapi: fix g_module_error binding, fixes bug 520267

2008-03-08  Jürg Billeter  <j@bitron.ch>

	* vala/valaclass.vala, vala/valaproperty.vala,
	  vala/valapropertyaccessor.vala, vala/valasemanticanalyzer.vala,
	  gobject/valaccodegeneratormemberaccess.vala: optimize access to
	  automatic properties, patch by Rob Taylor

2008-03-08  Jürg Billeter  <j@bitron.ch>

	* gobject/valaccodegenerator.vala: support foreach over
	  multi-dimensional arrays

	* tests/arrays.vala: test multi-dimensional arrays

2008-03-08  Jürg Billeter  <j@bitron.ch>

	* vala/parser.y, vala/scanner.l: support declaration of local
	  multi-dimensional array variables

2008-03-08  Jürg Billeter  <j@bitron.ch>

	* vapigen/valagidlparser.vala: improve instance delegate detection

	* vapi/atk.vapi, vapi/gdk-2.0.vapi, vapi/gdk-pixbuf-2.0.vapi,
	  vapi/gnet-2.0.vapi, vapi/gnome-vfs-2.0.vapi,
	  vapi/gstreamer-0.10.vapi, vapi/gstreamer-audio-0.10.vapi,
	  vapi/gstreamer-base-0.10.vapi, vapi/gtk+-2.0.vapi,
	  vapi/libgnomeui-2.0.vapi, vapi/liboobs-1.vapi,
	  vapi/libsoup-2.2.vapi, vapi/libsoup-2.4.vapi, vapi/libwnck-1.0.vapi,
	  vapi/pango.vapi, vapi/pangocairo.vapi:regenerated

2008-03-06  Jürg Billeter  <j@bitron.ch>

	* vala/valainterfacewriter.vala: tiny code improvement

2008-03-06  Jürg Billeter  <j@bitron.ch>

	* vapi/Makefile.am, vapi/libftdi.deps, vapi/libftdi.vapi:
	  add libftdi bindings, patch by Evan Nemerson

2008-03-05  Jürg Billeter  <j@bitron.ch>

	* vala/valaclasstype.vala, vala/valadatatype.vala,
	  vala/valainterfacetype.vala, vala/valainvalidtype.vala,
	  vala/valatypeparametertype.vala, vala/valavaluetype.vala,